--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -240,12 +240,6 @@
       <add name="WSFederationAuthenticationModule" type="System.IdentityModel.Services.WSFederationAuthenticationModule, System.IdentityModel.Services" />
       <add name="SessionAuthenticationModule" type="System.IdentityModel.Services.SessionAuthenticationModule, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" preCondition="managedHandler" />
     </modules>
-    <!--<handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>-->
     <handlers>
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
@@ -262,7 +256,7 @@
       </audienceUris>
       <issuerNameRegistry type="System.IdentityModel.Tokens.ConfigurationBasedIssuerNameRegistry, System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
         <trustedIssuers>
-          <add name="http://localhost:15198/" thumbprint="‎‎‎11e20e659d44a94dfe8434f4338701a2be577e7e" />
+          <add name="http://localhost:15198/" thumbprint="11E20E659D44A94DFE8434F4338701A2BE577E7E" />
         </trustedIssuers>
       </issuerNameRegistry>
     </identityConfiguration>
