add sso signout feature

--- a/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/Web.config
+++ b/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/Web.config
@@ -34,6 +34,7 @@
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthentication" />
+      <remove name="WebDAVModule" />
     </modules>
   </system.webServer>
   <runtime>
