--- a/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/IFramework.Sample.AuthWeb.csproj
+++ b/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/IFramework.Sample.AuthWeb.csproj
@@ -73,7 +73,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IdentityModel" />
-    <Reference Include="System.identitymodel.services" />
+    <Reference Include="System.identitymodel.services">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
