use unity ChildContainer instead of PerMessageContextLifetimeManager

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -27,7 +27,7 @@
     <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />-->
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
-    <alias alias="PerMessageOrExecutionContext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageOrExecutionContextLifetimeManager, IFramework" />
+    <!--<alias alias="hierarchical" type="IFramework.Infrastructure.Unity.LifetimeManagers.hierarchicalLifetimeManager, IFramework" />-->
     <!--<alias alias="permessagecontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageContextLifetimeManager, IFramework" />-->
     <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework" />
     <alias alias="EventSubscriber" type="IFramework.Event.Impl.EventSubscriber, IFramework" />
@@ -61,7 +61,7 @@
         </constructor>
       </register>-->
       <register type="IMessageStore" mapTo="SampleModelContext">
-        <lifetime type="PerMessageOrExecutionContext" />
+        <lifetime type="hierarchical" />
       </register>
       <register name="perResolveMessageStore" type="IMessageStore" mapTo="SampleModelContext">
       </register>
@@ -96,7 +96,7 @@
         </constructor>
       </register>-->
       <register type="IUnitOfWork" mapTo="UnitOfWork">
-        <lifetime type="PerMessageOrExecutionContext" />
+        <lifetime type="hierarchical" />
       </register>
       <register type="ICommandHandlerProvider" mapTo="CommandHandlerProvider">
         <lifetime type="singleton" />
@@ -176,7 +176,7 @@
         </constructor>
       </register>
       <register type="IEventBus" mapTo="EventBus">
-        <lifetime type="PerMessageOrExecutionContext" />
+        <lifetime type="hierarchical" />
         <constructor>
           <param name="provider" dependencyType="IEventSubscriberProvider" />
         </constructor>
@@ -184,7 +184,7 @@
       <register type="IFramework.Repositories.IDomainRepository, IFramework" mapTo="IFramework.EntityFramework.Repositories.DomainRepository, IFramework.EntityFramework" />
       <register type="IFramework.Repositories.IRepository`1, IFramework" mapTo="RepositoryImpl" />
       <register type="SampleModelContext" mapTo="SampleModelContext">
-        <lifetime type="PerMessageOrExecutionContext" />
+        <lifetime type="hierarchical" />
       </register>
     </container>
   </unity>
