--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ obj
 *.vsmdi
 /Src/Sample/Sample.CommandService/log
 /Src/Sample/Sample.CommandService/log.txt
+/Src/TestResults
+/Src/.vs/config
+/Src/iFramework/bin4.5/Debug
+/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/bin4.5
+/Src/iFramework.Plugins/IFramework.Log4Net/bin4.5/Debug
+/Src/iFramework.Plugins/IFramework.MessageQueue.ServiceBus/bin4.5/Debug
+/Src/iFramework.Plugins/IFramework.MessageStore.EntityFramework/bin4.5/Debug
+/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/App_Data
