add ToNameValueCollection to convert object to form data collection (querystring)

--- a/Src/Sample/Sample.CommandServiceTests/App.config
+++ b/Src/Sample/Sample.CommandServiceTests/App.config
@@ -2,14 +2,14 @@
 <configuration>
   <configSections>
     <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <!--<add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;User ID=sa;password=zhj777"/>-->
     <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;" />
     <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />-->
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
-    <alias alias="PerMessageOrExecutionContext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageOrExecutionContextLifetimeManager, IFramework" />
     <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework" />
     <alias alias="EventSubscriber" type="IFramework.Event.Impl.EventSubscriber, IFramework" />
     <alias alias="IMessagePublisher" type="IFramework.Message.IMessagePublisher, IFramework" />
@@ -37,12 +37,12 @@
     <alias alias="MessageContext" type="IFramework.MessageQueue.ServiceBus.MessageFormat.MessageContext, IFramework.MessageQueue.ServiceBus" ></alias>-->
     <container>
       <register type="IUnitOfWork" mapTo="UnitOfWork">
-        <lifetime type="PerMessageOrExecutionContext" />
+        <lifetime type="hierarchical" />
       </register>
       <register type="IFramework.Repositories.IDomainRepository, IFramework" mapTo="IFramework.EntityFramework.Repositories.DomainRepository, IFramework.EntityFramework" />
       <register type="IFramework.Repositories.IRepository`1, IFramework" mapTo="RepositoryImpl" />
       <register type="SampleModelContext" mapTo="SampleModelContext">
-        <lifetime type="PerMessageOrExecutionContext" />
+        <lifetime type="hierarchical" />
       </register>
       <register type="ILinearCommandManager" mapTo="LinearCommandManager">
         <lifetime type="singleton" />
@@ -64,8 +64,22 @@
           <param name="needMessageStore" value="false"></param>
         </constructor>
       </register>
-    
-    
+      <register type="IEventSubscriberProvider" mapTo="EventSubscriberProvider">
+        <lifetime type="singleton" />
+        <constructor>
+          <param name="assemblies">
+            <array>
+              <value value="DomainEventSubscriber" />
+            </array>
+          </param>
+        </constructor>
+      </register>
+      <register type="IEventBus" mapTo="EventBus">
+        <lifetime type="hierarchical" />
+        <constructor>
+          <param name="provider" dependencyType="IEventSubscriberProvider" />
+        </constructor>
+      </register>
       <instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!" />
       <!--<instance name="serviceBusConnectionString" value="Endpoint=sb://iframework.servicebus.chinacloudapi.cn/;StsEndpoint=https://iframework-sb.accesscontrol.chinacloudapi.cn/;SharedSecretIssuer=owner;SharedSecretValue=DfDIfwLDgVK4Ujx0iDmuUAFxYIkX+iFSnQFqw5BtpSw=" />-->
       <register type="IMessageQueueClient" mapTo="ServiceBusClient">
@@ -76,4 +90,19 @@
     </container>
   </unity>
 
+  <runtime>
+
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+
+      <dependentAssembly>
+
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+
+      </dependentAssembly>
+
+    </assemblyBinding>
+
+  </runtime>
 </configuration>
