--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -63,8 +63,8 @@
       <register type="IMessageStore" mapTo="SampleModelContext">
         <lifetime type="hierarchical" />
       </register>
-      <register name="perResolveMessageStore" type="IMessageStore" mapTo="SampleModelContext">
-      </register>
+      <!--<register name="perResolveMessageStore" type="IMessageStore" mapTo="SampleModelContext">
+      </register>-->
       <register type="ILinearCommandManager" mapTo="LinearCommandManager">
         <lifetime type="singleton" />
       </register>
