--- a/Src/iFramework/IFramework4.5.csproj
+++ b/Src/iFramework/IFramework4.5.csproj
@@ -35,30 +35,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=3.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.3.1.1\lib\net40\AutoMapper.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="AutoMapper.Net4, Version=3.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.3.1.1\lib\net40\AutoMapper.Net4.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -83,6 +59,9 @@
   <ItemGroup>
     <Compile Include="Bus\IBus.cs" />
     <Compile Include="Command\CommandBusExtension.cs" />
+    <Compile Include="IoC\IContainer.cs" />
+    <Compile Include="IoC\Lifetime.cs" />
+    <Compile Include="IoC\Parameter.cs" />
     <Compile Include="Message\MessageResponse.cs" />
     <Compile Include="Command\ILinearCommandManager.cs" />
     <Compile Include="Command\Impl\CommandBus.cs">
@@ -178,16 +157,12 @@
     <Compile Include="Infrastructure\CookieHelper.cs" />
     <Compile Include="Infrastructure\DynamicJson.cs" />
     <Compile Include="Infrastructure\GuidUtil.cs" />
-    <Compile Include="Infrastructure\IContainer.cs" />
-    <Compile Include="Infrastructure\IocFactory.cs" />
-    <Compile Include="Infrastructure\IoCInstanceProvider.cs" />
-    <Compile Include="Infrastructure\IoCServiceBehavior.cs" />
+    <Compile Include="IoC\IocFactory.cs" />
+    <Compile Include="IoC\IoCInstanceProvider.cs" />
+    <Compile Include="IoC\IoCServiceBehavior.cs" />
     <Compile Include="Infrastructure\LockUtility.cs" />
     <Compile Include="Infrastructure\SBase64Utility.cs" />
     <Compile Include="Infrastructure\TaskWorker.cs" />
-    <Compile Include="Infrastructure\Unity\InstanceItems.cs" />
-    <Compile Include="Infrastructure\Unity\LifetimeManagers\PerExecutionContextLifetimeManager.cs" />
-    <Compile Include="Infrastructure\Unity\WcfServiceInstanceExtension.cs" />
     <Compile Include="Infrastructure\Utility.cs" />
     <Compile Include="Message\IHandlerProvider.cs" />
     <Compile Include="Message\Impl\HandlerProvider.cs" />
