Implement partial KafakClient

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -35,6 +35,7 @@
     <alias alias="MessagePublisher" type="IFramework.Message.Impl.MessagePublisher, IFramework" />
     <alias alias="IMessageQueueClient" type="IFramework.MessageQueue.IMessageQueueClient, IFramework" />
     <alias alias="ServiceBusClient" type="IFramework.MessageQueue.ServiceBus.ServiceBusClient, IFramework.MessageQueue.ServiceBus" />
+    <alias alias="KafkaClient" type="IFramework.MessageQueue.MSKafka.KafkaClient, IFramework.MessageQueue.MSKafka" />
     <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework" />
     <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command" />
     <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework" />
@@ -163,9 +164,9 @@
       </register>
       <instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!" />
       <!--<instance name="serviceBusConnectionString" value="Endpoint=sb://iframework.servicebus.chinacloudapi.cn/;StsEndpoint=https://iframework-sb.accesscontrol.chinacloudapi.cn/;SharedSecretIssuer=owner;SharedSecretValue=DfDIfwLDgVK4Ujx0iDmuUAFxYIkX+iFSnQFqw5BtpSw=" />-->
-      <register type="IMessageQueueClient" mapTo="ServiceBusClient">
+      <register type="IMessageQueueClient" mapTo="KafkaClient">
         <constructor>
-          <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString" />
+          <param name="zkConnectionString" value="192.168.99.60:2181" />
         </constructor>
       </register>
       <register type="IMessagePublisher" mapTo="MessagePublisher">
