--- a/Src/Sample/Sample.CommandService/log4net.config
+++ b/Src/Sample/Sample.CommandService/log4net.config
@@ -1,13 +1,13 @@
 ﻿<log4net>
   <appender name="errorRollingFile" type="log4net.Appender.RollingFileAppender,log4net">
     <!--日志文件名-->
-    <file value="log/errorlog_"/>
+    <file value="log/errorlog.txt"/>
     <preserveLogFileNameExtension value="true" />
     <!--是否在文件中追加-->
     <appendToFile value="true"/>
     <!--按照文件的大小进行变换日志文件-->
     <rollingStyle value="Composite"/>
-    <datePattern value="yyyy-MM-dd.'log'" />
+    <datePattern value="yyyy-MM-dd" />
     <!--最大变换数量-->
     <maxSizeRollBackups value="10"/>
     <!--最大文件大小-->
@@ -62,4 +62,12 @@
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger>-->
+  <logger name="QueueClient">
+    <level value="DEBUG"/>
+    <appender-ref ref="debugRollingFile"/>
+  </logger>
+  <logger name="KafkaClient">
+    <level value="DEBUG"/>
+    <appender-ref ref="debugRollingFile"/>
+  </logger>
 </log4net>
