--- a/Src/iFramework.Plugins/MSKafka.Test/App.config
+++ b/Src/iFramework.Plugins/MSKafka.Test/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="681549d62126b7b8" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="1b44e1d426115821" />
+        <codeBase version="1.2.10.0" href="log4netv1.2.10.0\log4net.dll" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
