add log4net 1.2.10 support with 1.2.15 together.

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -76,7 +76,7 @@
           <param name="linearCommandManager" dependencyType="LinearCommandManager" />
           <param name="commandQueueNames">
             <array>
-              <value value="commandqueue1" />
+              <value value="commandqueueC" />
               <!--<value value="commandqueue2" />
               <value value="commandqueue3" />-->
             </array>
