--- a/Src/Sample/Sample.CommandService/log4net.config
+++ b/Src/Sample/Sample.CommandService/log4net.config
@@ -62,12 +62,12 @@
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger>-->
-  <logger name="QueueClient">
+  <!--<logger name="QueueClient">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger>
   <logger name="KafkaClient">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
-  </logger>
+  </logger>-->
 </log4net>
