--- a/Src/Sample/Sample.CommandServiceTests/App.config
+++ b/Src/Sample/Sample.CommandServiceTests/App.config
@@ -15,7 +15,8 @@
     <alias alias="IMessagePublisher" type="IFramework.Message.IMessagePublisher, IFramework" />
     <alias alias="MessagePublisher" type="IFramework.Message.Impl.MessagePublisher, IFramework" />
     <alias alias="IMessageQueueClient" type="IFramework.MessageQueue.IMessageQueueClient, IFramework" />
-    <alias alias="ServiceBusClient" type="IFramework.MessageQueue.ServiceBus.ServiceBusClient, IFramework.MessageQueue.ServiceBus" />
+    <!--<alias alias="ServiceBusClient" type="IFramework.MessageQueue.ServiceBus.ServiceBusClient, IFramework.MessageQueue.ServiceBus" />-->
+    <alias alias="KafkaClient" type="IFramework.MessageQueue.MSKafka.KafkaClient, IFramework.MessageQueue.MSKafka" />
     <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework" />
     <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command" />
     <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework" />
@@ -54,7 +55,7 @@
           <param name="linearCommandManager" dependencyType="LinearCommandManager" />
           <param name="commandQueueNames">
             <array>
-              <value value="commandqueue1" />
+              <value value="commandqueueZ" />
               <!--<value value="commandqueue2" />
               <value value="commandqueue3" />-->
             </array>
@@ -82,9 +83,14 @@
       </register>
       <instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!" />
       <!--<instance name="serviceBusConnectionString" value="Endpoint=sb://iframework.servicebus.chinacloudapi.cn/;StsEndpoint=https://iframework-sb.accesscontrol.chinacloudapi.cn/;SharedSecretIssuer=owner;SharedSecretValue=DfDIfwLDgVK4Ujx0iDmuUAFxYIkX+iFSnQFqw5BtpSw=" />-->
-      <register type="IMessageQueueClient" mapTo="ServiceBusClient">
+      <!--<register type="IMessageQueueClient" mapTo="ServiceBusClient">
         <constructor>
           <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString" />
+        </constructor>
+      </register>--> 
+      <register type="IMessageQueueClient" mapTo="KafkaClient">
+        <constructor>
+          <param name="zkConnectionString" value="192.168.99.60:2181" />
         </constructor>
       </register>
     </container>
@@ -101,7 +107,14 @@
         <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
 
       </dependentAssembly>
-
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="681549d62126b7b8" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="1b44e1d426115821" />
+        <codeBase version="1.2.10.0" href="log4netv1.2.10.0\log4net.dll" />
+      </dependentAssembly>
     </assemblyBinding>
 
   </runtime>
