--- a/Src/Sample/Sample.CommandServiceTests/App.config
+++ b/Src/Sample/Sample.CommandServiceTests/App.config
@@ -55,7 +55,7 @@
           <param name="linearCommandManager" dependencyType="LinearCommandManager" />
           <param name="commandQueueNames">
             <array>
-              <value value="commandqueueZ" />
+              <value value="commandqueueC" />
               <!--<value value="commandqueue2" />
               <value value="commandqueue3" />-->
             </array>
@@ -115,6 +115,14 @@
         <assemblyIdentity name="log4net" publicKeyToken="1b44e1d426115821" />
         <codeBase version="1.2.10.0" href="log4netv1.2.10.0\log4net.dll" />
       </dependentAssembly>
+      <dependentAssembly>
+
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+
+      </dependentAssembly>
+
     </assemblyBinding>
 
   </runtime>
