add kafka  test cases

--- a/Src/Sample/Sample.CommandServiceTests/App.config
+++ b/Src/Sample/Sample.CommandServiceTests/App.config
@@ -60,8 +60,8 @@
               <value value="commandqueue3" />-->
             </array>
           </param>
-          <param name="replyTopicName" value="replyTopic" />
-          <param name="replySubscriptionName" value="replySubscritpionTest" />
+          <param name="replyTopicName" value="replyTopicTest" />
+          <param name="replySubscriptionName" value="replySubscritpion" />
           <param name="needMessageStore" value="false"></param>
         </constructor>
       </register>
