fix kafkaclient bugs

--- a/Src/Sample/Sample.CommandService/log4net.config
+++ b/Src/Sample/Sample.CommandService/log4net.config
@@ -65,9 +65,9 @@
   <!--<logger name="QueueClient">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
-  </logger>
-  <logger name="KafkaClient">
+  </logger>-->
+  <logger name="WebApiApplication">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
-  </logger>-->
+  </logger>
 </log4net>
