update asp.net mvc

--- a/Src/iFramework.Plugins/MSKafka.Test/App.config
+++ b/Src/iFramework.Plugins/MSKafka.Test/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
@@ -107,6 +107,10 @@
       <dependentAssembly>
         <assemblyIdentity name="log4net" publicKeyToken="1b44e1d426115821" />
         <codeBase version="1.2.10.0" href="log4netv1.2.10.0\log4net.dll" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
