implement sliding door

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -130,11 +130,7 @@
           <param name="commandBus" dependencyType="ICommandBus"></param>
           <param name="messagePublisher" dependencyType="IMessagePublisher"></param>
           <param name="subscriptionName" value="eventSubscriber" />
-          <param name="topics">
-            <array>
-              <value value="DomainEventTopic" />
-            </array>
-          </param>
+          <param name="topic" value="DomainEventTopic"></param>
         </constructor>
       </register>
       <register name="ApplicationEventProvider" type="IHandlerProvider" mapTo="EventSubscriberProvider">
@@ -155,11 +151,7 @@
           <param name="commandBus" dependencyType="ICommandBus"></param>
           <param name="messagePublisher" dependencyType="IMessagePublisher"></param>
           <param name="subscriptionName" value="appEventSubscriber" />
-          <param name="topics">
-            <array>
-              <value value="AppEventTopic" />
-            </array>
-          </param>
+          <param name="topic" value="AppEventTopic"></param>
         </constructor>
       </register>
       <instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!" />
