--- a/Src/iFramework/IFramework4.5.csproj
+++ b/Src/iFramework/IFramework4.5.csproj
@@ -63,6 +63,8 @@
     <Compile Include="IoC\Lifetime.cs" />
     <Compile Include="IoC\Parameter.cs" />
     <Compile Include="MessageQueue\Configuration.cs" />
+    <Compile Include="Message\Impl\SlidingDoor.cs" />
+    <Compile Include="Message\ISlidingDoor.cs" />
     <Compile Include="Message\MessageResponse.cs" />
     <Compile Include="Command\ILinearCommandManager.cs" />
     <Compile Include="Command\Impl\CommandBus.cs">
