add slidingdoor for commandbus to consume replies.

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -82,7 +82,7 @@
             </array>
           </param>
           <param name="replyTopicName" value="replyTopic" />
-          <param name="replySubscriptionName" value="replySubscritpion" />
+          <param name="replySubscriptionName" value="replySubscription" />
           <param name="needMessageStore" value="true"></param>
         </constructor>
       </register>
