--- a/Src/Sample/Sample.CommandServiceTests/App.config
+++ b/Src/Sample/Sample.CommandServiceTests/App.config
@@ -61,7 +61,7 @@
             </array>
           </param>
           <param name="replyTopicName" value="replyTopicTest" />
-          <param name="replySubscriptionName" value="replySubscritpion" />
+          <param name="replySubscriptionName" value="replySubscription" />
           <param name="needMessageStore" value="false"></param>
         </constructor>
       </register>
