add command topic support to route command sent to corresponding queue

--- a/Src/iFramework.Plugins/IFramework.MessageQueue.ServiceBus/IFramework.MessageQueue.ServiceBus4.5.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.ServiceBus/IFramework.MessageQueue.ServiceBus4.5.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config\Configuration.cs" />
     <Compile Include="MessageFormat\MessageContext.cs" />
     <Compile Include="ServiceBusClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -73,9 +74,7 @@
       <Name>IFramework4.5</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Config\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
