--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -148,12 +148,16 @@
         </constructor>
       </register>
       <instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!" />
-      <!--<instance name="serviceBusConnectionString" value="Endpoint=sb://iframework.servicebus.chinacloudapi.cn/;StsEndpoint=https://iframework-sb.accesscontrol.chinacloudapi.cn/;SharedSecretIssuer=owner;SharedSecretValue=DfDIfwLDgVK4Ujx0iDmuUAFxYIkX+iFSnQFqw5BtpSw=" />-->
-      <register type="IMessageQueueClient" mapTo="KafkaClient">
+      <register type="IMessageQueueClient" mapTo="ServiceBusClient">
+        <constructor>
+          <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString" />
+        </constructor>
+      </register>
+      <!--<register type="IMessageQueueClient" mapTo="KafkaClient">
         <constructor>
           <param name="zkConnectionString" value="192.168.99.60:2181" />
         </constructor>
-      </register>
+      </register>-->
       <register type="IMessagePublisher" mapTo="MessagePublisher">
         <lifetime type="singleton" />
         <constructor>
