--- a/Src/Sample/Sample.CommandServiceTests/App.config
+++ b/Src/Sample/Sample.CommandServiceTests/App.config
@@ -15,7 +15,7 @@
     <alias alias="IMessagePublisher" type="IFramework.Message.IMessagePublisher, IFramework" />
     <alias alias="MessagePublisher" type="IFramework.Message.Impl.MessagePublisher, IFramework" />
     <alias alias="IMessageQueueClient" type="IFramework.MessageQueue.IMessageQueueClient, IFramework" />
-    <!--<alias alias="ServiceBusClient" type="IFramework.MessageQueue.ServiceBus.ServiceBusClient, IFramework.MessageQueue.ServiceBus" />-->
+    <alias alias="ServiceBusClient" type="IFramework.MessageQueue.ServiceBus.ServiceBusClient, IFramework.MessageQueue.ServiceBus" />
     <alias alias="KafkaClient" type="IFramework.MessageQueue.MSKafka.KafkaClient, IFramework.MessageQueue.MSKafka" />
     <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework" />
     <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command" />
@@ -76,16 +76,16 @@
       </register>
       <instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!" />
       <!--<instance name="serviceBusConnectionString" value="Endpoint=sb://iframework.servicebus.chinacloudapi.cn/;StsEndpoint=https://iframework-sb.accesscontrol.chinacloudapi.cn/;SharedSecretIssuer=owner;SharedSecretValue=DfDIfwLDgVK4Ujx0iDmuUAFxYIkX+iFSnQFqw5BtpSw=" />-->
-      <!--<register type="IMessageQueueClient" mapTo="ServiceBusClient">
+      <register type="IMessageQueueClient" mapTo="ServiceBusClient">
         <constructor>
           <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString" />
         </constructor>
-      </register>--> 
-      <register type="IMessageQueueClient" mapTo="KafkaClient">
+      </register> 
+     <!-- <register type="IMessageQueueClient" mapTo="KafkaClient">
         <constructor>
           <param name="zkConnectionString" value="192.168.99.60:2181" />
         </constructor>
-      </register>
+      </register>-->
     </container>
   </unity>
 
