change producer RequiredAcks to -1, the server will block until the message is committed by all in sync replicas before sending a response.

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -147,8 +147,9 @@
           <param name="topic" value="AppEventTopic"></param>
         </constructor>
       </register>
-      <instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!" />
-     <!-- <register type="IMessageQueueClient" mapTo="ServiceBusClient">
+      <!--<instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:1552/ServiceBusDefaultNamespace;RuntimePort=1553;ManagementPort=1552;OAuthUsername=ivan;OAuthPassword=DevPassword01!" />-->
+      <!--<instance name="serviceBusConnectionString" value="Endpoint=sb://eco-rd-sb/eco-rd-test;StsEndpoint=https://eco-rd-sb:9355/eco-rd-test;RuntimePort=9354;ManagementPort=9355;OAuthUsername=sbadmin;OAuthPassword=Password01!" />
+      <register type="IMessageQueueClient" mapTo="ServiceBusClient">
         <constructor>
           <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString" />
         </constructor>
